--- a/README.Rmd
+++ b/README.Rmd
@@ -22,21 +22,19 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-plume provides tools for handling and generating author-related information for scientific writing in R Markdown and Quarto.
-The package implements two `R6` classes:
+plume provides tools for handling and generating author-related information for scientific writing in R Markdown and Quarto. The package implements two R6 classes:
 
-- `Plume`: class that generates author lists and other author-related information
-from tabular data.
+- `PlumeQuarto`: class that allows you to push or update author metadata in the YAML header of Quarto files. The generated YAML complies with Quarto's [author and affiliations schemas](https://quarto.org/docs/journals/authors.html).
 
-- `PlumeQuarto`: class extending `Plume` that allows you to push or update author metadata in the YAML header of a Quarto file. The generated YAML complies with [Quarto's author and affiliations schemas](https://quarto.org/docs/journals/authors.html).
+- `Plume`: class that generates author lists and other author-related information as character strings.
 
 ## Installation
 
 You can install the development version of plume from GitHub with:
 
 ```{r, eval = FALSE}
-# install.packages("devtools")
-devtools::install_github("arnaudgallou/plume")
+# install.packages("pak")
+pak::pak("arnaudgallou/plume")
 ```
 
 ## Usage
@@ -58,7 +56,7 @@ tmp <- withr::local_tempfile(
 )
 ```
 
-`PlumeQuarto` lets you push author metadata in the YAML header of any `.qmd` files using `to_yaml()`.
+`PlumeQuarto` lets you push author metadata in the YAML header of any `.qmd` file using the `to_yaml()` method.
 
 Consider the following example:
 
@@ -79,7 +77,7 @@ aut$to_yaml(tmp)
 cat(readr::read_file(tmp))
 ```
 
-You can also generate author information as character strings:
+Alternatively, you can generate author information as character strings.
 
 ```{r, message = FALSE}
 aut <- Plume$new(encyclopedists, names = c(role = "role_n"))
@@ -108,5 +106,4 @@ aut_v$get_contributions(role_first = FALSE, name_list = TRUE)
 
 ## Acknowledgements
 
-Thanks to [Richard J. Telford](https://github.com/richardjtelford) for his advice
-that helped me conceive this package.
+Thanks to [Richard J. Telford](https://github.com/richardjtelford) for his advice that helped me conceive this package.
