--- a/vignettes/plume.Rmd
+++ b/vignettes/plume.Rmd
@@ -234,7 +234,7 @@ plume provides three methods to set particular status to authors:
 
 `set_equal_contributor()` and `set_deceased()` are specific to `PlumeQuarto`. You can specify equal contributors and deceased authors in `Plume` via the `note` variable.
 
-By default, `set_*()` methods assign values by authors' id. You can change this behaviour at the object (in `PlumeQuarto` only) or method level using the `by` parameter.
+By default, `set_*()` methods assign values by authors' id. You can change this behaviour at the object (in `PlumeQuarto` only) or method level using the `by`/`.by` parameter.
 
 Note that these methods are case insensitive.
 
