Describe how to replace default arguments

--- a/vignettes/working-in-other-languages.Rmd
+++ b/vignettes/working-in-other-languages.Rmd
@@ -38,3 +38,29 @@ PlumeFr <- R6::R6Class(
 
 PlumeFr$new(encyclopedists_fr)
 ```
+
+You can also overwrite the default arguments of some methods to match your language. I recommend doing it in the `public` argument of the class definition. For the purpose of this example, I'll use the `set()` method instead. For example, to change `divider` and `sep_last` to ` : ` and ` et ` in `get_contributions()`:
+
+```{r}
+PlumeFr$set("public", "get_contributions", function(
+  roles_first = TRUE,
+  by_author = FALSE,
+  alphabetical_order = FALSE,
+  dotted_initials = TRUE,
+  literal_names = FALSE,
+  divider = " : ",
+  sep = ", ",
+  sep_last = " et "
+) {
+  super$get_contributions(
+    roles_first, by_author, alphabetical_order, dotted_initials,
+    literal_names, divider, sep, sep_last
+  )
+})
+
+aut <- PlumeFr$new(
+  encyclopedists_fr,
+  roles = c(supervision = "Supervision", rédaction = "Rédaction")
+)
+aut$get_contributions()
+```
