--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/plume)](https://CRAN.R-project.org/package=plume)
 [![R-CMD-check](https://github.com/arnaudgallou/plume/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/arnaudgallou/plume/actions/workflows/R-CMD-check.yaml)
-[![Codecov test coverage](https://codecov.io/gh/arnaudgallou/plume/branch/main/graph/badge.svg)](https://app.codecov.io/gh/arnaudgallou/plume?branch=main)
+[![Codecov test coverage](https://codecov.io/gh/arnaudgallou/plume/graph/badge.svg)](https://app.codecov.io/gh/arnaudgallou/plume)
 <!-- badges: end -->
 
 ## Overview
