--- a/vignettes/working-in-other-languages.Rmd
+++ b/vignettes/working-in-other-languages.Rmd
@@ -48,14 +48,13 @@ PlumeFr$set("public", "get_contributions", function(
   roles_first = TRUE,
   by_author = FALSE,
   alphabetical_order = FALSE,
-  dotted_initials = TRUE,
   literal_names = FALSE,
   divider = " : ",
   sep = ", ",
   sep_last = " et "
 ) {
   super$get_contributions(
-    roles_first, by_author, alphabetical_order, dotted_initials,
+    roles_first, by_author, alphabetical_order,
     literal_names, divider, sep, sep_last
   )
 })
