Rework `working-in-other-languages` vignette

--- a/vignettes/working-in-other-languages.Rmd
+++ b/vignettes/working-in-other-languages.Rmd
@@ -41,23 +41,45 @@ PlumeFr <- R6::R6Class(
 PlumeFr$new(encyclopedists_fr)
 ```
 
-You can also overwrite the default arguments of some methods to match your language. I recommend doing it in the `public` argument of the class definition. For the purpose of this example, I'll use the `set()` method instead. For example, to change `divider` and `sep_last` to ` : ` and ` et ` in `get_contributions()`:
+You can also override the default arguments of some methods to match your language. Expanding on the example above, we can add a new `get_contributions()` method to replace the default arguments of the `divider` and `sep_last` parameters:
 
 ```{r}
-PlumeFr$set("public", "get_contributions", function(
-  roles_first = TRUE,
-  by_author = FALSE,
-  alphabetical_order = FALSE,
-  literal_names = FALSE,
-  divider = " : ",
-  sep = ", ",
-  sep_last = " et "
-) {
-  super$get_contributions(
-    roles_first, by_author, alphabetical_order,
-    literal_names, divider, sep, sep_last
+PlumeFr <- R6::R6Class(
+  classname = "PlumeFr",
+  inherit = Plume,
+  private = list(
+    names = set_default_names(
+      initials = "initiales",
+      literal_name = "nom_complet",
+      corresponding = "correspondant",
+      given_name = "prénom",
+      family_name = "nom",
+      email = "courriel",
+      phone = "téléphone"
+    )
+  ),
+  public = list(
+    get_contributions = function(
+      roles_first = TRUE,
+      by_author = FALSE,
+      alphabetical_order = FALSE,
+      literal_names = FALSE,
+      divider = " : ",
+      sep = ", ",
+      sep_last = " et "
+    ) {
+      super$get_contributions(
+        roles_first = roles_first,
+        by_author = by_author,
+        alphabetical_order = alphabetical_order,
+        literal_names = literal_names,
+        divider = divider,
+        sep = sep,
+        sep_last = sep_last
+      )
+    }
   )
-})
+)
 ```
 
 ```{r}
